[NUTCH-2292] mavenization, no checked tests